[package]
name = "shellaga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", default-features = false }
crossterm = "0.27.0"
itertools = "0.12.1"
log = "0.4.21"
ndarray = "0.15.6"
oslog = "0.2.0"
pretty_assertions = "1.4.0"
ratatui = "0.26.1"
