[package]
name = "shellaga"
version = "0.2.1"
edition = "2021"
authors = [
    "Ben Leadbetter <ben.leadbetter@hotmail.com>",
]
description = "A Galaga-like game which runs in the Terminal."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", default-features = false }
crossterm = "0.27.0"
itertools = "0.12.1"
log = "0.4.21"
ndarray = "0.15.6"
rand = "0.8.5"
ratatui = "0.26.1"

[target.'cfg(target_os = "windows")'.dependencies]
eventlog = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "6.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
oslog = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
